<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical" 
				android:layout_width="match_parent"
				android:layout_height="match_parent">

	<TextView 	android:id="@+id/name_label"
				android:text="@string/name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:layout_below="@id/title_line_top" />
	<EditText 	android:id="@+id/name" 
		  		android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:layout_below="@id/name_label"/>

	<EditText 	android:id="@+id/username"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/username_label"/>

	<TextView 	android:id="@+id/password_label"
				android:text="@string/username"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/username"/>

	<EditText 	android:id="@+id/password" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/password_label"/>
	
	<Button 	android:id="@+id/confirm" 
	  			android:text="@string/confirm"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
	        	android:layout_alignParentBottom="true" />
</RelativeLayout>